--- a/src/app/configs/tsconfig.json
+++ b/src/app/configs/tsconfig.json
@@ -3,6 +3,6 @@
 "paths": {
     "@modules/*": ["src/app/modules/*"],
     "@configs/*": ["src/config/*"],
-    "@shared/*": ["src/app/shared"],
+    "@shared/*": ["src/app/shared/*"],
     "@database/*": ["src/app/database/*"],
 }
