--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,12 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
+  },
+
+  "paths": {
+    "@modules/*": ["src/app/modules/*"],
+    "@configs/*": ["src/config/*"],
+    "@shared/*": ["src/app/shared/*"],
+    "@database/*": ["src/app/database/*"]
   }
 }
